Revert "feat(AUTH-CPC-1775): Added mailing endpoints to cart" (#1323)
Reverts cgerard321/champlain_petclinic#1321


This PR is the likely cause of the broken cart service in production.